prov/efa: Fix neglected symbol resolution issues
This fixes some symbol resolution issues seen only when building
Libfabric with LTTNG (--with-lttng=<prefix>). This was likely overlooked
when migrating files from the rxr/ subdirectory

Signed-off-by: Darryl Abbate <drl@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -151,7 +151,8 @@ endif ENABLE_EFA_UNIT_TEST
 
 efa_CPPFLAGS += \
 	-I$(top_srcdir)/prov/efa/src/ \
-	-I$(top_srcdir)/prov/efa/src/rxr/
+	-I$(top_srcdir)/prov/efa/src/dgram/ \
+	-I$(top_srcdir)/prov/efa/src/rdm/
 
 if HAVE_EFA_DL
 pkglib_LTLIBRARIES += libefa-fi.la
