contrib/intel/jenkins: add --branch option to opt out clone
Signed-off-by: Zach Dworkin <zachary.dworkin@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -87,7 +87,7 @@ pipeline {
         withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
           sh """
             mkdir ${env.WORKSPACE}/py_scripts
-            git clone ${env.UPSTREAM} ${env.WORKSPACE}/py_scripts
+            git clone --branch ${TARGET} ${env.UPSTREAM} ${env.WORKSPACE}/py_scripts
             ${env.SKIP_PATH}/skip.sh ${env.WORKSPACE} ${TARGET}
             ${env.SKIP_PATH}/release.sh ${env.WORKSPACE} ${TARGET}
           """
