--- a/fabtests/fabtests.vcxproj
+++ b/fabtests/fabtests.vcxproj
@@ -237,7 +237,7 @@
     <ClCompile Include="functional\rdm_tagged_peek.c" />
     <ClCompile Include="functional\rdm_netdir.c" />
     <ClCompile Include="functional\scalable_ep.c" />
-    <ClCompile Include="functional\msg_inject.c" />
+    <ClCompile Include="functional\inject_test.c" />
     <ClCompile Include="functional\bw.c" />
     <ClCompile Include="unit\av_test.c" />
     <ClCompile Include="unit\cntr_test.c" />
