--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -8,7 +8,12 @@ def check_target() {
   if (changeRequest()) {
     TARGET = env.CHANGE_TARGET
   }
-  return TARGET
+
+  if (TARGET) {
+    return TARGET
+  }
+
+  return "main"
 }
 
 def skip() {
