core/fi_peer: Move peer provider defines into new header
The peer provider APIs target provider implementations, not
applications.  Move the definitions out of fi_ext.h, which is
used by apps, and into include/rdma/providers/fi_peer.h.  This
better indicates that the APIs are intended for providers, not
applications.

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/libfabric.vcxproj.filters
+++ b/libfabric.vcxproj.filters
@@ -809,6 +809,9 @@
     <ClInclude Include="include\rdma\providers\fi_log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\rdma\providers\fi_peer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="include\rdma\providers\fi_prov.h">
       <Filter>Header Files</Filter>
     </ClInclude>
