--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -134,6 +134,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_hfi1_progress.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_progress.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_tid_domain.h \
+	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_match.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_trigger.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct_atomic.h \
 	$(top_srcdir)/prov/opx/include/rdma/fi_direct.h \
