--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -66,7 +66,8 @@ _efa_files = \
 	prov/efa/src/rdm/rxr_read.c \
 	prov/efa/src/rdm/rxr_op_entry.c \
 	prov/efa/src/rdm/rxr_atomic.c \
-	prov/efa/src/rdm/rxr_tp_def.c
+	prov/efa/src/rdm/rxr_tp_def.c \
+	prov/efa/src/rdm/efa_rdm_srx.c
 
 _efa_headers = \
 	prov/efa/src/efa.h \
@@ -107,7 +108,8 @@ _efa_headers = \
 	prov/efa/src/rdm/rxr_op_entry.h \
 	prov/efa/src/rdm/rdm_proto_v4.h \
 	prov/efa/src/rdm/rxr_tp_def.h \
-	prov/efa/src/rdm/rxr_tp.h
+	prov/efa/src/rdm/rxr_tp.h \
+	prov/efa/src/rdm/efa_rdm_srx.h
 
 if HAVE_LTTNG
 efa_LDFLAGS += -llttng-ust
