prov/efa: use_device_rdma available via fi_setopt/fi_getopt
When the application sets the libfabric API version to 1.18 or greater,
then it may use fi_setopt on the endpoint to enable or disable
device RDMA.  The user may still override the application using the
environment variable FI_EFA_USE_DEVICE_RDMA.  The application may also
query the value of use_device_rdma using fi_getopt.

When the appliction uses libfabric API version < 1.18, use_device_rdma
will be set from the environment as before.

Signed-off-by: Luke Robison <lrbison@amazon.com>
(cherry picked from commit db0622da51ef0a19e8cbe946a0f1daaa0d33c05d)

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -899,6 +899,7 @@
     <ClCompile Include="prov\efa\src\rdm\efa_rdm_cq.c" />
     <ClCompile Include="prov\efa\src\rdm\efa_rdm_peer.c" />
     <ClCompile Include="prov\efa\src\rdm\efa_rdm_srx.c" />
+    <ClCompile Include="prov\efa\src\rdm\efa_rdm_util.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\fasthash.h" />
@@ -1022,6 +1023,7 @@
     <ClInclude Include="prov\efa\src\rdm\rxr_read.h" />
     <ClInclude Include="prov\efa\src\rdm\rxr_rma.h" />
     <ClInclude Include="prov\efa\src\rdm\efa_rdm_srx.h" />
+    <ClInclude Include="prov\efa\src\rdm\efa_rdm_util.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="libfabric.def" />
