prov/efa: exchange rxr endpoint host id information during handshake
This change introduces a new optional handshake packet field hid(host id)
enabled by the HID_HDR flag. The hid value is parsed from a host id file
configured in rxr_env.

Notably, hid is optional and provided at best effort, which means:
- It is set to 0 by default.
- If the endpoint fails to parse hid, it will skip the error.
- hid is included in handshake if and only if it is non-zero.

Signed-off-by: Wenduo Wang <wenduwan@amazon.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -1009,6 +1009,7 @@
     <ClInclude Include="prov\efa\src\efa_base_ep.h" />
     <ClInclude Include="prov\efa\src\dgram\efa_dgram.h" />
     <ClInclude Include="prov\efa\src\rdm\rxr_pkt_type_base.h" />
+    <ClInclude Include="prov\efa\src\rdm\rxr_pkt_type_misc.h" />
     <ClInclude Include="prov\efa\src\rdm\rxr.h" />
     <ClInclude Include="prov\efa\src\rdm\rxr_atomic.h" />
     <ClInclude Include="prov\efa\src\rdm\rxr_cntr.h" />
