--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -101,6 +101,7 @@ _efa_headers = \
 	prov/efa/src/rdm/rxr_pkt_type.h \
 	prov/efa/src/rdm/rxr_pkt_type_req.h \
 	prov/efa/src/rdm/rxr_pkt_type_base.h \
+	prov/efa/src/rdm/rxr_pkt_type_misc.h \
 	prov/efa/src/rdm/rxr_pkt_cmd.h \
 	prov/efa/src/rdm/rxr_pkt_pool.h \
 	prov/efa/src/rdm/rxr_read.h \
