--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -162,6 +162,7 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_from_default.py \
 	pytest/efa/test_av.py \
 	pytest/efa/test_cq.py \
+	pytest/efa/test_setopt.py \
 	pytest/efa/test_dgram.py \
 	pytest/efa/test_rdm.py \
 	pytest/efa/test_rma_bw.py \
