prov/efa: enrich error messages with debug and connection info
Enrich error messages with additional details. Provide debug
instructions for the common unresponsive receiver and invalid qpn
errors. Also structure connection information to include local and peer
EFA address and host id, if available.

The application is expected to first call:
fi_cq_readerr(*cq, *buf, flags)

and pass buf->err_data to:
fi_cq_strerror(cq, prov_errno, buf->err_data, buf, len)

Added unit test cases to verify error string format.

Signed-off-by: Wenduo Wang <wenduwan@amazon.com>
(cherry picked from commit 4cb1522adfd26963468dadd9af2320cd02a2518e)

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -111,6 +111,7 @@ _efa_headers = \
 	prov/efa/src/rdm/rdm_proto_v4.h \
 	prov/efa/src/rdm/rxr_tp_def.h \
 	prov/efa/src/rdm/rxr_tp.h \
+	prov/efa/src/rdm/efa_rdm_error.h \
 	prov/efa/src/rdm/efa_rdm_srx.h \
 	prov/efa/src/rdm/efa_rdm_util.h
 
